styles(filter):fixed dark mode styles

--- a/components/General/inputStyles.css
+++ b/components/General/inputStyles.css
@@ -59,7 +59,7 @@
 }
 
 .custom-theme-and-dark input{
-    color: #ffffff;
+    color: #749BC2;
     background-color: #020818;
     pointer-events: none;
     /* border: 1px solid white; */
